UPDATE 2.2.0 see changes in changelog/v2.2.0.md